Fix mocks in tests